2010-06-05	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added missing description for '|' in aide.conf man page
	* Report correct file type in "Detailed information about changes" section

2010-06-04	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Replaced 'File' by 'Entry' in database warnings
	* Reformatted "Entry ... has different attributes" warnings

2010-06-03	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added missing space and new line to "Error in selective regexp" message,
	  fixes bug 1944700
	* Added missing '-' to separator line in the report

2010-05-30	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.14.1
	* Changed version to post-0.14.1

2010-05-20	Richard van den Berg  <richard@vdberg.org>
	* Support spaces and other characters in file paths in config by Byron Darrah  <bdarrah@corp.netzero.net>
	* Added aide-attributes.sh script by Hannes von Haugwitz <hannes@vonhaugwitz.com>

2010-05-19	Richard van den Berg  <richard@vdberg.org>
	* Use exit() instead of abort() by Steve Grubb <sgrubb@redhat.com>
	* Fixed changed permissions are always reported issue by Hannes von Haugwitz <hannes@vonhaugwitz.com>

2010-04-09	Richard van den Berg  <richard@vdberg.org>
	* Use DB_ATTR_TYPE for compare_dbline() by Patrick Neely <patrick.neely@gtri.gatech.edu>

2010-03-27	Richard van den Berg  <richard@vdberg.org>
	* Changed version to post-0.14
	* Do not use += in configure, fixes bug 2972100
	* Change gzdopen() from wb+ to wb, fixes bug 2976146
	* Do not strcat into uninitialized data, fixes bug 2919946
	* Add missing db_sql prototypes, and Sun Studio compatibility, fixes bug 2888035
	* Initialize gcrypt properly, fixes bug 2763470

2010-03-16	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.14

2010-02-26	Richard van den Berg  <richard@vdberg.org>
	* Changed version to post-0.14-rc3
	* Fixed some AC_ARG_WITH magic
	* Define ENOATTR if needed by Hannes von Haugwitz <hannes@vonhaugwitz.com>
