@@ -1,6 +1,7 @@
 2010-06-05	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Added missing description for '|' in aide.conf man page
 	* Report correct file type in "Detailed information about changes" section
+	* Fixed strcpy issue on multi-core environments
 
 2010-06-04	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Replaced 'File' by 'Entry' in database warnings
